--- a/www/sys/languages/ukrainian/system.lng
+++ b/www/sys/languages/ukrainian/system.lng
@@ -856,7 +856,7 @@ bb-code = "bb-коди"
 Пользователям портала доступно больше настроек = "Користувачам порталу доступно більше налаштуваннь"
 Пользователям сайта доступно больше настроек = "Користувачам сайту доступно більше налаштуваннь"
 В поле "%s" используются запрещенные символы = "У полі "%s" використовуються заборонені символи"
-Очень хорошо, надеемся на их соблюдение = "Дуже добре, сопдіваємось їх дотримання"
+Очень хорошо, надеемся на их соблюдение = "Дуже добре, сподіваємось їх дотримання"
 Новый список виджетов успешно сохранен = "Новий список віджетів успішно збережений"
 Сборка версии, до которой обновляемся = "Збірка версії, до якої оновлюємось"
 BETA версия успешно сделана релизом = "BETA версія успішно зроблена релізом"
